--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ sentence_transformers==2.5.1
 openai==1.37.1
 python-dotenv
 alembic
-python-dotenv
 sqlalchemy
 sqlalchemy-utils
 psycopg2
@@ -15,3 +14,4 @@ schedule
 requests
 beautifulsoup4
 llama-index
+pydub
